[package]
name = "e0_evm_first"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.11.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tokio = "1.43.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.135"
url = "2.5.0"
k256 = { version = "0.13.4", features = ["arithmetic", "ecdsa", "sha256"] }
rand = "0.9.0"
